--- a/src/components/Updates/Update.css
+++ b/src/components/Updates/Update.css
@@ -20,7 +20,7 @@
     background-position: center; 
     opacity: .8;
 }
-input[type=text] {
+input[type=email] {
   width: 40%;
   padding: 12px 20px;
   margin-top: 10px;
