--- a/src/components/Destination/Destination.css
+++ b/src/components/Destination/Destination.css
@@ -2,8 +2,8 @@
     text-align: center;
     text-transform: uppercase;
     color:  #e67e22;
-    background-color: #f5f6fa;
     padding-top: 20px;
+    
 }
 .top-destination{
     text-align: center;
@@ -11,13 +11,34 @@
     font-size: 30px;
     font-style: italic;
     font-weight: bold;
-    background-color: #f5f6fa;
     padding-bottom: 20px;
+    margin-top: 20px;
 }
 .second{
     width: 100%;
 }
 
 .bg-images{
-background-color: #f5f6fa;
+
+margin: 0px 100px;
+}
+
+/*Big tablet to 1200px (widths smaller that the 1140px row)*/
+@media only screen and (max-width:1200px){
+  
+}
+
+/*small tablets to big tablets: from 768px to 1023px*/
+@media only screen and (max-width:1023px){
+
+}
+
+/*small phones to small tablets: from 481px-767px*/
+@media only screen and (max-width:767px){
+
+}
+
+/*small phones from 0 to 480px*/
+@media only screen and (max-width:480px){
+
 }
