--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -6,7 +6,7 @@
     padding-top: 20px;
     margin-top: -22px;
 }
-.top-destination{
+.top-testimonial{
     text-align: center;
     text-transform: uppercase;
     font-size: 30px;
