--- a/src/components/Activities/Activity.css
+++ b/src/components/Activities/Activity.css
@@ -1,14 +1,17 @@
-.destinaton{
+.activity{
     text-align: center;
     text-transform: uppercase;
     color:  #e67e22;
+    margin-top: 20px;
+    font-size: 15px;
 }
-.top-destination{
+.top-activity{
     text-align: center;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 20px;
     font-style: italic;
     font-weight: bold;
+    margin-bottom: 20px;
 }
 .activities-img{
     width: 100%;
@@ -23,7 +26,8 @@
     text-decoration: none;
     background-color: #e67e22;
     color: #fff;
-    margin-left: 159px;
+    margin-left: 15.5%;
+    position: absolute;
     
 }
 .booking{
@@ -35,4 +39,57 @@
 }
 .ipsum{
    font-size: 14px;
+}
+
+/*Big tablet to 1200px (widths smaller that the 1140px row)*/
+@media only screen and (max-width:1200px){
+  .btn-btn-activity{
+    padding: 10px 20px;   
+}
+}
+
+/*small tablets to big tablets: from 768px to 1023px*/
+@media only screen and (max-width:1023px){
+      .btn-btn-activity{
+         padding: 8px 8px; 
+         font-size: 12px;
+}
+
+}
+
+/*small phones to small tablets: from 481px-767px*/
+@media only screen and (max-width:767px){
+    .activity-place{
+        font-size: 16px;
+    }
+    .lorem-page{
+        font-size: 12px;
+    }
+    .ipsum{
+        font-size: 10px;
+    }
+    .price{
+        font-size: 16px;
+    }
+     .btn-btn-activity{
+         padding: 8px 8px; 
+         font-size: 10px;
+         position: absolute;
+         margin-left: 16%;     
+}
+
+}
+
+/*small phones from 0 to 480px*/
+@media only screen and (max-width:480px){
+.activities-img{
+   margin-top: 10px;
+}
+
+   .btn-btn-activity{
+         padding: 8px 8px; 
+         font-size: 10px;
+         position: absolute;
+         margin-left: 75%;     
+}
 }
