--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,20 +2,49 @@
     text-align: center;
     text-transform: uppercase;
     color:  #e67e22;
-    background-color: #f5f6fa;
     padding-top: 50px;
     margin-top: -22px;
+    font-size: 15px;
 }
 .contact-sub{
     text-align: center;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 20px;
     font-style: italic;
     font-weight: bold;
-    background-color: #f5f6fa;
     padding-bottom: 20px;
 }
 .contact-form{
     margin: 0px 100px;
     width: 100%;
+}
+
+.contact-img{
+    margin-left: 20%;
+    height: 160px;
+    width: 250px;
+
+}
+
+
+/*Big tablet to 1200px (widths smaller that the 1140px row)*/
+@media only screen and (max-width:1200px){
+  
+}
+
+/*small tablets to big tablets: from 768px to 1023px*/
+@media only screen and (max-width:1023px){
+
+}
+
+/*small phones to small tablets: from 481px-767px*/
+@media only screen and (max-width:767px){
+
+}
+
+/*small phones from 0 to 480px*/
+@media only screen and (max-width:480px){
+form{
+  margin-left: 0px;
+}
 }
