--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -1,31 +1,34 @@
-.destinaton{
+.team-heading{
     text-align: center;
     text-transform: uppercase;
     color:  #e67e22;
+    font-size: 15px;
 }
-.top-destination{
+.top-team{
     text-align: center;
     text-transform: uppercase;
-    font-size: 30px;
-    font-style: italic;
+    font-size: 20px;
+    font-style: italic; 
     font-weight: bold;
+    margin-top: 20px;
 }
-.team{
-    margin-top: -11px;
-    margin-bottom: -16px;
-    width: 550px;
-    
+
+.bg-ipsum{
+    background-color: #e3e1dd;
+    width: 560px;
+    height: 328px;
+    margin-top: -0px;
+    line-height: 25px;
 }
 .lorem-content{
     padding-bottom: 110px;
     text-align: justify;
     font-size: 15px;
-    padding: 40px 10px;
+    padding: 40px 40px;
   
 }
-.section-team{
-   background-color: #dcdde1;
-   margin: 0px 12px;
+.my-team{
+    width: 100%;
 }
 .btn-btn-readmore:link,
 .btn-btn-readmore:visited{
@@ -36,12 +39,14 @@
     background-color: #e67e22;
     color: #fff;
     margin-top: -90px;
+    margin-left: 40px;  
     
 }
 .sub-team{
     background-color: #000;
     padding: 30px 0px;
     color: #fff;
+    margin-top: -16px;
 }
 
 .social{
@@ -52,4 +57,69 @@
 .sub-team-content{
     margin-left: 30px;
     font-size: 15px;
+}
+.content{
+    margin-top: 20px;
+}
+
+
+/*Big tablet to 1200px (widths smaller that the 1140px row)*/
+@media only screen and (max-width:1200px){
+    .bg-ipsum{
+    background-color: #e3e1dd;
+    width: 535px;
+    margin-top: -0px;
+    line-height: 25px;
+}
+}
+
+/*small tablets to big tablets: from 768px to 1023px*/
+@media only screen and (max-width:1023px){
+
+    .bg-ipsum{
+    background-color: #e3e1dd;
+    width: 450px;
+    height: 268px;
+    margin-top: -0px;
+    line-height: 25px;
+    margin-top: -2px;
+}
+.lorem-content{
+    font-size: 12px;
+    line-height: 20px;
+    padding: 20px;
+}
+.btn-btn-readmore:link,
+.btn-btn-readmore:visited{
+    margin-left: 30px;   
+}
+
+}
+
+/*small phones to small tablets: from 481px-767px*/
+@media only screen and (max-width:767px){
+.lorem-content{
+    font-size: 10px;
+    line-height: 18px;
+    padding: 2px;
+}
+.btn-btn-readmore:link,
+.btn-btn-readmore:visited{
+    margin-left: 0px; 
+    margin-top: 4px;  
+    padding: 4px;
+}
+}
+
+/*small phones from 0 to 480px*/
+@media only screen and (max-width:480px){
+.btn-btn-readmore:link,
+.btn-btn-readmore:visited{
+    margin-left: 0px; 
+    margin-top: 4px;  
+    padding: 4px;
+}
+.sub-team{
+    margin-top: -1px;
+}
 }
