--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -2,23 +2,23 @@
     text-align: center;
     text-transform: uppercase;
     color:  #e67e22;
-    background-color: #f5f6fa;
     padding-top: 20px;
-    margin-top: -22px;
+    margin-top: 22px;
+    font-size: 15px;
 }
 .top-testimonial{
     text-align: center;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 20px;
     font-style: italic;
     font-weight: bold;
-    background-color: #f5f6fa;
     padding-bottom: 20px;
 }
 .card{
     background-color: #fff;
     margin-top: 70px;
     box-shadow: 0 3px 30px rgba(0, 0,0, .8);
+    border-radius: 6px;
    
 }
 .card-header{
@@ -39,16 +39,19 @@
 .testimone-page{
     font-size: 12px;
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    margin-top: -40px;
+    position: relative;
 }
 .card-footer{
-    border-top: 1px solid #e67e22;
+    border-top: 1px solid #8f8781;
     padding-top: 40px;
 }
 .star{
     color: #e67e22;
     font-size: 30px;
-    margin-top: -50px;
+    position: absolute;
+    margin-top: -45px;
 }
 .name{
     margin-top: -40px;
@@ -60,7 +63,35 @@
 }
 .testimonial-section{
     background-color:#f5f0f0;
-    margin: 12px;
+    margin-top: 40px;
     
 
+}
+/*Big tablet to 1200px (widths smaller that the 1140px row)*/
+@media only screen and (max-width:1200px){
+  .name{
+      font-size: 16px;
+  }
+}
+
+/*small tablets to big tablets: from 768px to 1023px*/
+@media only screen and (max-width:1023px){
+.name{
+      font-size: 12px;
+  }
+}
+
+/*small phones to small tablets: from 481px-767px*/
+@media only screen and (max-width:767px){
+.name{
+      font-size: 10px;
+  }
+  .star{
+      font-size: 20px;
+  }
+}
+
+/*small phones from 0 to 480px*/
+@media only screen and (max-width:480px){
+.name{ position: absolute;}
 }
