--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -189,7 +189,7 @@ input[type=text] {
     height: 100%;
    
 }
-.footer-button{
+.footer-line{
     margin-top: 170%;
     border-top: 1px solid #b5bdbf;
     
