--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -43,8 +43,9 @@
 }
 
 /*small phones from 0 to 480px*/
-@media only screen and (max-width:480px){
-form{
-  margin-left: 0px;
+@media only screen and (max-width:500px){
+.contacts{
+    margin-left: -70px;
 }
+
 }
