--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -48,4 +48,35 @@
     margin-left: -70px;
 }
 
+input[type=text] {
+   background-color: #edebe5;
+   border: none;
+}
+
+.contact-img{
+    margin-left: 20%;
+    height: 210px;
+    width: 200px;
+    margin-top: 10px;
+
+}
+.myform{
+    margin-right: 20%;
+}
+textarea{
+    margin-top: 10px;
+    background-color: #edebe5;
+    border: none;
+}
+.btn-submit{
+    display: inline-block;
+    padding: 10px 30px;
+    text-decoration: none;
+    background-color: #e67e22;
+    color: #fff;
+    border: none;
+    margin-left: 50%;
+    cursor: pointer;
+}
+
 }
