--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -57,6 +57,7 @@
     margin-top: -40px;
     margin-left: 40%;
     font-size: 17px;
+    
 }
 .card-main{
     width: 70%;
@@ -64,6 +65,8 @@
 .testimonial-section{
     background-color:#f5f0f0;
     margin-top: 40px;
+    padding-bottom: 40px;
+    
     
 
 }
@@ -92,6 +95,21 @@
 }
 
 /*small phones from 0 to 480px*/
-@media only screen and (max-width:480px){
-.name{ position: absolute;}
+@media only screen and (max-width:500px){
+.testimone-page{
+    font-size: 8px;
+}
+.card-main{
+   width: 90%;
+}
+.star{
+    font-size: 14px;
+    position: absolute;
+    margin-top: -30px;
+}
+.name{
+    margin-top: -30px;
+    margin-left: 40%;
+    font-size: 8px;
+}
 }
