--- a/src/components/Activities/Activity.css
+++ b/src/components/Activities/Activity.css
@@ -87,19 +87,26 @@
 }
 
    .btn-btn-activity{
-         padding: 8px 8px; 
+         padding: 6px 8px; 
          font-size: 10px;
          position: absolute;
          margin-left: 3%;     
 }
-.card-section{
-    margin: 10%;
+    .card-section{
+        margin: 10%;
+        margin-top: 0px;
+        
+    }
+    .activity-place{
+        font-size: 10px;
+    }
+    .lorem-page{
+        font-size: 10px;
+    }
+    .bg-card{
+        box-shadow: 0 2px 30px rgba(0, 0,0, .8);
+    }
+    .activities-img{
     margin-top: 0px;
-}
-.activity-place{
-    font-size: 10px;
-}
-.lorem-page{
-    font-size: 10px;
 }
 }
