--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -39,7 +39,37 @@
 
 /*small phones to small tablets: from 481px-767px*/
 @media only screen and (max-width:767px){
+    input[type=text] {
+        background-color: #edebe5;
+        border: none;
+}
+    textarea{
+        margin-top: 10px;
+        background-color: #edebe5;
+        border: none;
+        padding-right: 95px;
+}
+   textarea[placeholder]{
+       padding-left: 20px;
+   }
+    .contact-img{
+        margin-left: 20%;
+        height: 230px;
+        width: 230px;
+        margin-top: 10px;
 
+}
+    .btn-submit{
+        display: inline-block;
+        padding: 10px 30px;
+        text-decoration: none;
+        background-color: #e67e22;
+        color: #fff;
+        border: none;
+        margin-left: 60%;
+        cursor: pointer;
+        margin-top: 10px;
+}
 }
 
 /*small phones from 0 to 480px*/
@@ -67,6 +97,7 @@ textarea{
     margin-top: 10px;
     background-color: #edebe5;
     border: none;
+    width: 100%;
 }
 .btn-submit{
     display: inline-block;
@@ -78,5 +109,8 @@ textarea{
     margin-left: 50%;
     cursor: pointer;
 }
+     textarea[placeholder]{
+       padding-left: 20px;
+   }
 
 }
