--- a/src/components/Updates/Update.css
+++ b/src/components/Updates/Update.css
@@ -33,10 +33,7 @@ input[type=email] {
   box-sizing: border-box;
  
 }
-.input-field:focus{
-  border: none;
 
-}
 .email{
     color: #000;
    
@@ -51,11 +48,22 @@ input[type=email] {
 /*small tablets to big tablets: from 768px to 1023px*/
 @media only screen and (max-width:1023px){
 
+
 }
 
 /*small phones to small tablets: from 481px-767px*/
 @media only screen and (max-width:767px){
-
+  .input-field{
+   margin-left: 40%;
+  }
+  input[type=email] {
+  width: 50%;
+  padding: 12px 20px;
+  margin-top: 10px;
+  margin-left: 25%;
+  box-sizing: border-box;
+ 
+}
 }
 
 /*small phones from 0 to 480px*/
