--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -34,6 +34,40 @@
 
 /*small tablets to big tablets: from 768px to 1023px*/
 @media only screen and (max-width:1023px){
+        input[type=text] {
+            background-color: #edebe5;
+            border: none;
+            
+            
+}
+         textarea{
+            margin-top: 10px;
+            background-color: #edebe5;
+            border: none;
+            padding-right: 210px;
+            padding-bottom: 40px;
+}
+        textarea[placeholder]{
+            padding-left: 20px;
+   }
+        .btn-submit{
+            display: inline-block;
+            padding: 10px 30px;
+            text-decoration: none;
+            background-color: #e67e22;
+            color: #fff;
+            border: none;
+            margin-left: 68%;
+            cursor: pointer;
+            margin-top: 10px;
+}
+        .contact-img{
+            margin-left: 10%;
+            height: 260px;
+            width: 350px;
+            margin-top: 10px;
+
+}
 
 }
 
