--- a/src/components/Activities/Activity.css
+++ b/src/components/Activities/Activity.css
@@ -50,10 +50,20 @@
 
 /*small tablets to big tablets: from 768px to 1023px*/
 @media only screen and (max-width:1023px){
-      .btn-btn-activity{
-         padding: 8px 8px; 
-         font-size: 12px;
+         .btn-btn-activity{
+            padding: 9px 8px; 
+            font-size: 12px;
+            margin-left: 141px; 
 }
+        .card-section{
+            margin: 8%;
+            margin-top: 0px;
+    }
+        .bg-card{
+            box-shadow: 0 2px 30px rgba(0, 0,0, .8);
+            padding-bottom: 9px;
+    }
+
 
 }
 
@@ -71,12 +81,7 @@
     .price{
         font-size: 16px;
     }
-     .btn-btn-activity{
-         padding: 8px 8px; 
-         font-size: 10px;
-         position: absolute;
-         margin-left: 16%;     
-}
+
     .activities-img{
          margin-top: 0px;
 }
