--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -76,18 +76,27 @@
 
 /*small tablets to big tablets: from 768px to 1023px*/
 @media only screen and (max-width:1023px){
-.name{
-      font-size: 12px;
+    .name{
+      font-size: 14px;
   }
+   .name,
+    .star{
+        margin-top: -30px;
+    }
+
+      .card-main{
+        width: 90%;
+    }
+
 }
 
 /*small phones to small tablets: from 481px-767px*/
 @media only screen and (max-width:767px){
-.name{
+    .name{
       font-size: 10px;
      
   }
-  .star{
+    .star{
       font-size: 20px;
       
   }
