--- a/src/components/Updates/Update.css
+++ b/src/components/Updates/Update.css
@@ -42,6 +42,12 @@ input[type=email] {
 
 /*Big tablet to 1200px (widths smaller that the 1140px row)*/
 @media only screen and (max-width:1200px){
+   input[type=email] {
+      width: 30%;
+      padding: 12px 20px;
+      margin-top: 10px;
+      margin-left: 35%;
+}
   
 }
 
@@ -53,8 +59,6 @@ input[type=email] {
       padding: 12px 20px;
       margin-top: 10px;
       margin-left: 30%;
-      
- 
 }
 
 }
