--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -26,14 +26,44 @@
 
 }
 
+    input[type=text] {
+            background-color: #edebe5;
+            border: none;    
+}
+         textarea{
+            margin-top: 10px;
+            background-color: #edebe5;
+            border: none;
+            padding-right: 51%;
+            padding-bottom: 70px;
+}
+        textarea[placeholder]{
+            padding-left: 20px;
+   }
+        .btn-submit{
+            display: inline-block;
+            padding: 10px 30px;
+            text-decoration: none;
+            background-color: #e67e22;
+            color: #fff;
+            border: none;
+            margin-left: 72%;
+            cursor: pointer;
+            margin-top: 10px;
+}
+        .contact-img{
+            margin-left: 6%;
+            height: 300px;
+            width: 420px;
+            margin-top: 10px;
+}
+
 
 /*Big tablet to 1200px (widths smaller that the 1140px row)*/
 @media only screen and (max-width:1200px){
     input[type=text] {
             background-color: #edebe5;
-            border: none;
-            
-            
+            border: none;    
 }
          textarea{
             margin-top: 10px;
@@ -61,7 +91,6 @@
             height: 280px;
             width: 380px;
             margin-top: 10px;
-
 }
 
   
