--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -2,29 +2,29 @@
     text-align: center;
     text-transform: uppercase;
     color:  #e67e22;
-    font-size: 15px;
+    font-size: 1.5rem;
 }
 .top-team{
     text-align: center;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 2rem;
     font-style: italic; 
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 1rem;
 }
 
 .bg-ipsum{
     background-color: #e3e1dd;
-    width: 560px;
-    height: 328px;
+    width: 56rem;
+    height: 32.8rem;
     margin-top: -0px;
-    line-height: 25px;
+    line-height: 2.5rem;
 }
 .lorem-content{
-    padding-bottom: 110px;
+    padding-bottom: 11rem;
     text-align: justify;
-    font-size: 15px;
-    padding: 40px 40px;
+    font-size: 1.5rem;
+    padding: 4rem 4rem;
   
 }
 .my-team{
@@ -33,35 +33,72 @@
 .btn-btn-readmore:link,
 .btn-btn-readmore:visited{
     display: inline-block;
-    padding: 10px 30px;
+    padding: 1rem 3rem;
     font-weight: 300;
     text-decoration: none;
     background-color: #e67e22;
     color: #fff;
-    margin-top: -90px;
-    margin-left: 40px;  
+    margin-top: -9rem;
+    margin-left: 4rem;  
     
 }
 .sub-team{
     background-color: #000;
-    padding: 30px 0px;
+    padding: 3rem 0rem;
     color: #fff;
-    margin-top: -16px;
+    margin-top: -1.6rem;
 }
 
 .social{
     color: #e67e22;
-    margin-right: 10px;
+    margin-right: 1rem;
     
 }
 .sub-team-content{
-    margin-left: 30px;
-    font-size: 15px;
+    margin-left: 3rem;
+    font-size: 1.5rem;
 }
 .content{
-    margin-top: 20px;
+    margin-top: 2rem;
 }
 
+@media only screen and (min-width:2000px){
+    .team-heading{
+        font-size: 2.5rem;
+    }
+    .top-team{
+        font-size: 3rem;
+    }
+    .section-team{
+        margin-top: 4rem;
+    }
+    .my-team{
+        margin-left: -8rem;
+        width: 60rem;
+    }
+    .lorem-content{
+         font-size: 1.5rem;
+         padding: 1.5rem;
+         line-height: 2.5rem;
+         margin-right: 8rem;
+           
+    }
+    .btn-btn-readmore:link,
+    .btn-btn-readmore:visited{
+        margin-top: 3rem;
+        font-size: 2rem;
+}
+    .sub-team{
+        background-color: #000;
+        padding: 3rem 3rem;
+        color: #fff;
+        margin-top: -1.3rem;
+        margin-left: 0rem;
+        width: 100%;
+        
+}
+
+}
 
 /*Big tablet to 1200px (widths smaller that the 1140px row)*/
 @media only screen and (max-width:1200px){
