--- a/src/components/Destination/Destination.css
+++ b/src/components/Destination/Destination.css
@@ -2,19 +2,19 @@
     text-align: center;
     text-transform: uppercase;
     color:  #e67e22;
-    padding-top: 20px;
-    font-size: 15px;
+    padding-top: 2rem;
+    font-size: 1.5rem;
     
 }
 
 .top-destination{
     text-align: center;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 2rem;
     font-style: italic;
     font-weight: bold;
-    padding-bottom: 20px;
-    margin-top: 10px;
+    padding-bottom: 2rem;
+    margin-top: 1rem;
 }
 .second{
     width: 100%;
@@ -22,10 +22,31 @@
 }
 
 .bg-images{
+    width: 80%;
 
-margin: 0px 100px;
+margin: 0px 10rem;
 }
 
+@media only screen and (min-width:2000px){
+    .destination-section{
+       margin-top: 2rem;
+    }
+    .destinaton{
+        font-size: 2.5rem;
+    }
+    .top-destination{
+        font-size: 3rem;
+    }
+   
+    .second{
+        width: 120%;
+        padding: 2rem;
+        
+      
+    }
+  
+  
+}
 /*Big tablet to 1200px (widths smaller that the 1140px row)*/
 @media only screen and (max-width:1200px){
   
