--- a/src/components/NavBar/Style.css
+++ b/src/components/NavBar/Style.css
@@ -14,10 +14,9 @@ header{
 .travel{
     color: #ed5421;
     text-align: center;
-    margin-right:10%;
     text-transform: uppercase;
-    margin-bottom: 20px;
-    font-size: 20px;
+    margin-bottom: 2rem;
+    font-size: 2rem;
 }
 h1{
     margin: 0;
@@ -25,8 +24,8 @@ h1{
     font-size: 200%;
     text-transform: uppercase;
     font-style: italic;
-    letter-spacing: 1px;
-    word-spacing: 4px;
+    letter-spacing: 0.1rem;
+    word-spacing: 0.4rem;
 }
 .par-one{
     color: #fff;
@@ -36,7 +35,7 @@ h1{
 .btn-btn-contact:link,
 .btn-btn-contact:visited{
     display: inline-block;
-    padding: 10px 30px;
+    padding: 1rem 3rem;
     font-weight: 300;
     text-decoration: none;
     background-color: #e67e22;
@@ -48,22 +47,19 @@ h1{
     background-color: #61b69d;
 }
 .btn-btn-contact{
-    margin-top: 20px;
+    margin-top: 2rem;
     margin-left: 35%;
     transition: background-color 0.4s, border 0.4s, color 0.4s;
 }
 .design{
     color: #ed5421;
-    position: absolute;
-    margin-top: 30px;
-    margin-left: 60px;
+    margin-top: 3rem;
     font-style: italic;
-    border-bottom: 1px solid #ed5421; 
+    border-bottom: 0.1rem solid #ed5421; 
 }
 .logo{
     color: #fff;
-    position: absolute;
-    margin-top: 30px;
+    margin-top: 3rem;
 }
 .logo,
 .design{
@@ -72,12 +68,12 @@ h1{
 .main-nav{
     float: right;
     list-style: none;
-    margin-right: 50px;
+    margin-right: 5rem;
     
 }
 .main-nav li{
     display: inline-block;
-    margin-left: 40px;
+    margin-left: 4rem;
 }
 .main-nav li a{
     color: #fff;
@@ -85,22 +81,55 @@ h1{
 }
  .login{
     background-color: #e67e22;
-    padding: 3px 8px;
+    padding: 0.3rem 0.8rem;
     
 }
 .main-nav li a:link,
 .main-nav li a:visited{
-      padding: 8px 0;
-      border-bottom: 2px solid transparent;
+      padding: 08rem 0;
+      border-bottom: 0.2rem solid transparent;
       transition: border-bottom 0.4s;
-      
-
-
 }
 .main-nav li a:hover,
 .main-nav li a:active{
-    border-bottom: 2px solid #ed5421;
+    border-bottom: 0.2rem solid #ed5421;
 
+
+}
+
+@media only screen and (min-width:2000px){
+
+    .main-nav li a{
+        font-size: 2rem;
+       
+    }
+
+     .main-nav li{
+       margin-top: 1.6rem;
+       
+    }
+    .logo,
+    .design{
+    font-size: 2.5rem;
+}
+    .logo{margin-left: 3rem;}
+
+    .travel{
+        font-size: 3rem;
+        margin-left: -12rem;
+        margin-top: -8rem;
+    }
+    h1{
+        margin-left: 2rem;
+        font-size: 3.8rem;
+    }
+    .par-one{
+        font-size: 2rem;
+    }
+    .btn-btn-contact{
+        font-size: 2rem;
+        margin-left: 22rem;
+}
 
 }
 
@@ -115,8 +144,8 @@ h1{
     text-align: center;
     margin-right:20%;
     text-transform: uppercase;
-    margin-bottom: 20px;
-    font-size: 16px;
+    margin-bottom: 2rem;
+    font-size: 1.6rem;
 }
 h1{
     margin: 0;
@@ -124,31 +153,28 @@ h1{
     font-size: 150%;
     text-transform: uppercase;
     font-style: italic;
-    letter-spacing: 1px;
-    word-spacing: 4px;
+    letter-spacing: 01rem;
+    word-spacing: 0.4rem;
 }
 
 .par-one{
     color: #fff;
     opacity: 0.4;
-    font-size: 16px;
+    font-size: 1.6rem;
 }
 .btn-btn-contact{
-    margin-top: 20px;
+    margin-top: 2rem;
     margin-left: 30%;
     transition: background-color 0.4s, border 0.4s, color 0.4s;
 }
      
 }
-
-
-
 /*small phones to small tablets: from 481px-767px*/
 @media only screen and (max-width:767px){
 .par-one{
     color: #fff;
     opacity: 0.4;
-    font-size: 20px;
+    font-size: 2rem;
 }
 }
 
@@ -159,14 +185,14 @@ h1{
     .main-nav{
     float: right;
     list-style: none;
-    margin-right: 10px;
+    margin-right: 1rem;
     
 }
 
 .main-nav li{
     display: inline-block;
-    margin-left: 8px;
-    font-size: 12px;
+    margin-left: 0.8rem;
+    font-size: 1.2rem;
 }
 h1{
     margin: 0;
@@ -174,34 +200,34 @@ h1{
     font-size: 90%;
     text-transform: uppercase;
     font-style: italic;
-    letter-spacing: 1px;
-    word-spacing: 4px;
+    letter-spacing: 0.1rem;
+    word-spacing: 0.4rem;
 }
 
 .design{
     color: #ed5421;
-    font-size: 15px;
+    font-size: 1.5rem;
     
 }
 .logo{
-    font-size: 15px;
-    margin-left: 4px;
+    font-size: 1.5rem;
+    margin-left: 0.4rem;
 }
 h1{
-    margin-left: -40px; 
-    margin-bottom: 10px;
+    margin-left: -4rem; 
+    margin-bottom: 1rem;
 }
 .par-one{
     color: #fff;
     opacity: 0.4;
-    font-size: 14px;
+    font-size: 1.4rem;
 }
 .btn-btn-contact{
     margin-left: 25%;
    
 }
 .travel{
-    margin-top: -60px;
+    margin-top: -6rem;
 }
    
 }
