--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,33 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html{
+    font-size:62.5%;
+    background-color: #fff;
+    color: #555;
+    font-weight: 300;
+    font-family:'Lato' Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    text-rendering: optimizeLegibility;
+}
+
+  @media only screen and (min-width:2000px){
+  html{
+
+   font-size: 150%;
+
+  }
+  }
+@media only screen and (max-width:1200px){
+  html{
+   font-size: 50%;
+  }
+
+
+  
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
